Refactor: Move Git tutorial to Docs, rewrite content for tone, and apply visual tweaks to cards and sidebar

--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,6 +1,6 @@
 yeezi:
   name: yeezi
-  title: Ex-Meta Staff Engineer, Co-founder GreatFrontEnd
+  title: Embedded Software Engineer, Custom Keyboard Enthusiast
   url: https://github.com/Kepler174
   image_url: https://github.com/Kepler174.png
   page: true
